# python-project-lvl4

./: README.md  pyproject.toml
task_manager/: settings.py
