[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["andrejrabinov <andryabinov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
django-secrets = "^1.0.2"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
